--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "prettier": "prettier --write .",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "commit": "cz"
   },
+
   "dependencies": {
     "pinia": "^2.0.0-rc.10",
     "vue": "^3.2.16"
@@ -19,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^1.9.3",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -29,5 +32,10 @@
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vue-tsc": "^0.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
